--- a/app/src/main/res/layout/date_time_slot.xml
+++ b/app/src/main/res/layout/date_time_slot.xml
@@ -6,8 +6,7 @@
     android:padding="5dp"
     android:textStyle="bold"
     android:gravity="center_vertical"
-    android:drawableTint="@android:color/white"
-    android:drawableRight="@drawable/forward"
-    android:textSize="@dimen/upcoming">
+    android:drawableTint="@color/upcoming_text"
+    android:drawableRight="@drawable/forward">
 
 </TextView>
