--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,9 @@
 <resources>
     <dimen name="header">22sp</dimen>
     <dimen name="font_size">18sp</dimen>
-    <dimen name="heading">10sp</dimen>
+    <dimen name="heading">8sp</dimen>
     <dimen name="upcoming">12sp</dimen>
     <dimen name="sub_text">18sp</dimen>
+    <dimen name="about">14sp</dimen>
+    <dimen name="sub_about">16sp</dimen>
 </resources>
