--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/header"
-        android:layout_above="@+id/bt_submit">
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -511,10 +512,9 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="7dp"
         android:layout_marginLeft="5dp"
-
         android:layout_marginRight="5dp"
         android:layout_weight="1"
         android:background="@drawable/button_rounded_corner"
         android:text="@string/signUp"
-        android:textColor="@android:color/white" />
+        android:textColor="@color/inside_blue" />
 </RelativeLayout>
