--- a/app/src/main/res/layout/fragment_common_header.xml
+++ b/app/src/main/res/layout/fragment_common_header.xml
@@ -9,7 +9,7 @@
         android:layout_height="match_parent"
         android:theme="@style/AppTheme"
         android:id="@+id/linearLayout"
-        android:background="@color/dayName"
+        android:background="@color/blue"
         android:layout_gravity="top">
         <ImageView
             android:id="@+id/iv_back_btn"
@@ -27,7 +27,7 @@
             android:textStyle="bold"
             android:gravity="center"
             android:textAlignment="center"
-            android:textColor="@android:color/white"
+            android:textColor="@color/inside_blue"
             android:textSize="21sp"
             android:layout_gravity="center" />
         <ImageView
