--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/header"
         android:layout_alignParentLeft="true"
+
         android:layout_alignParentStart="true">
 
         <RelativeLayout
@@ -50,7 +51,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/rounded_corner"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
 
                     <LinearLayout
                         android:id="@+id/line1"
@@ -274,7 +277,9 @@
                     android:layout_below="@+id/textView30"
                     android:background="@drawable/rounded_corner"
                     android:orientation="vertical"
-                    android:padding="5dp">
+                    android:padding="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="5dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -474,25 +479,43 @@
                             android:layout_weight=".01"
                             android:gravity="center"
                             android:text=":" />
-
-                        <ToggleButton
-                            android:id="@+id/tb_male"
+                        <RelativeLayout
                             android:layout_width="0dp"
-                            android:layout_height="40dp"
-                            android:layout_weight="0.3"
-                            android:checked="true"
-                            android:text="Gender"
-                            android:textOff="Male"
+                            android:layout_weight=".6"
+                            android:layout_height="match_parent"
+                            android:orientation="horizontal">
 
-                            android:textOn="Male" />
+                            <ToggleButton
+                                android:id="@+id/tb_female"
+                                android:layout_width="100dp"
+                                android:layout_height="40dp"
+                                android:textOff="Female"
+                                android:textOn="Female"
+                                android:textColor="@drawable/toggle_color"
+                                android:textSize="@dimen/sub_text"
+                                android:background="@drawable/selector"
+                                android:layout_alignParentTop="true"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignParentEnd="true" />
 
-                        <ToggleButton
-                            android:id="@+id/tb_female"
-                            android:layout_width="0dp"
-                            android:layout_height="40dp"
-                            android:layout_weight="0.29"
-                            android:textOff="Female"
-                            android:textOn="Female" />
+                            <ToggleButton
+                                android:id="@+id/tb_male"
+                                android:layout_width="wrap_content"
+                                android:layout_height="40dp"
+                                android:checked="true"
+                                android:text="Gender"
+                                android:textColor="@drawable/toggle_color"
+                                android:textOff="Male"
+                                android:textSize="@dimen/sub_text"
+                                android:background="@drawable/selector"
+                                android:textOn="Male"
+                                android:layout_alignParentTop="true"
+                                android:layout_toLeftOf="@+id/tb_female"
+                                android:layout_toStartOf="@+id/tb_female" />
+
+                        </RelativeLayout>
+
+
                     </LinearLayout>
 
 
