--- a/app/src/main/res/layout/activity_appointment_acknowledgement.xml
+++ b/app/src/main/res/layout/activity_appointment_acknowledgement.xml
@@ -60,14 +60,16 @@
                 android:layout_height="30dp"
                 android:gravity="left|center"
                 android:text="@string/date"
+
                 android:textSize="@dimen/font_size"
                 android:textStyle="bold" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
+                android:gravity="left"
                 android:text=":"
+
                 android:textStyle="bold" />
 
             <TextView
@@ -75,6 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+
                 android:gravity="left|center"
                 android:textSize="@dimen/font_size"
 
@@ -91,26 +94,28 @@
                 android:id="@+id/tv_name_label"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-                
+
                 android:gravity="left|center"
-                
+                android:layout_marginRight="20dp"
                 android:text="@string/time_Zone"
                 android:textSize="@dimen/font_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-               
-                android:gravity="right"
-                android:text=":" />
+                android:gravity="left"
+                android:layout_marginRight="5dp"
+                android:text=":"
+               />
 
             <TextView
                 android:id="@+id/tv_timeZone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+
                 android:gravity="left|center"
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
 
@@ -130,8 +135,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-               
-                android:gravity="right"
+
+                android:gravity="left"
                 android:text=":" />
 
             <TextView
@@ -140,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left|center"
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
         <TableRow
@@ -154,7 +159,7 @@
                 android:layout_height="30dp"
 
                 android:gravity="left|center"
-                
+
                 android:text="@string/last"
                 android:textSize="@dimen/font_size" />
 
@@ -162,7 +167,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:gravity="right"
+                android:gravity="left"
                 android:text=":" />
 
             <TextView
@@ -171,7 +176,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left|center"
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
 
@@ -185,14 +190,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:gravity="left|center"
-                
+
                 android:text="@string/email"
                 android:textSize="@dimen/font_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
+                android:gravity="left"
                 android:text=":" />
 
             <TextView
@@ -201,7 +206,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left|center"
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
 
@@ -222,7 +227,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:gravity="right"
+                android:gravity="left"
                 android:text=":" />
 
             <TextView
@@ -232,7 +237,7 @@
                 android:layout_weight="1"
                 android:gravity="left|center"
 
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
         <TableRow
@@ -246,7 +251,7 @@
             android:layout_height="30dp"
 
             android:gravity="left|center"
-            
+
             android:text="@string/service"
             android:textSize="@dimen/font_size" />
 
@@ -254,7 +259,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:gravity="right"
+            android:gravity="left"
             android:text=":" />
 
         <TextView
@@ -263,7 +268,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="left|center"
-            
+
             android:textSize="@dimen/font_size" />
     </TableRow>
         <TableRow
@@ -277,16 +282,16 @@
                 android:layout_height="30dp"
 
                 android:gravity="left|center"
-                
+
                 android:text="@string/status"
-            
+
                 android:textSize="@dimen/font_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                
-                android:gravity="right"
+
+                android:gravity="left"
                 android:text=":" />
 
             <TextView
@@ -295,7 +300,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left|center"
-                
+
                 android:text="@string/Booked"
                 android:textSize="@dimen/font_size"
              />
@@ -308,7 +313,7 @@
         android:layout_height="30dp"
         android:gravity="left|center"
         android:textStyle="bold"
-        
+
         android:text="@string/location_details"
         android:textSize="@dimen/font_size" />
     <TableLayout
@@ -326,9 +331,7 @@
                 android:id="@+id/tv_org"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
-
                 android:gravity="left|center"
-                
                 android:text="@string/orginzatrion"
                 android:textStyle="bold"
                 android:textSize="@dimen/font_size" />
@@ -337,7 +340,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:gravity="right"
+                android:gravity="left"
+                android:layout_marginRight="5dp"
                 android:text=":" />
 
             <TextView
@@ -347,7 +351,7 @@
                 android:layout_weight="1"
                 android:gravity="left|center"
                 android:textStyle="bold"
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
         <TableRow
@@ -360,14 +364,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:gravity="left|center"
-                
+
                 android:text="@string/address"
                 android:textSize="@dimen/font_size" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
+                android:gravity="left"
+                android:layout_marginRight="5dp"
                 android:text=":" />
 
             <TextView
@@ -376,7 +381,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="left|center"
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
         <TableRow
@@ -390,7 +395,7 @@
                 android:layout_height="30dp"
 
                 android:gravity="left|center"
-                
+
                 android:text="@string/phone"
                 android:textStyle="bold"
                 android:textSize="@dimen/font_size" />
@@ -399,7 +404,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:gravity="right"
+                android:gravity="left"
+                android:layout_marginRight="5dp"
                 android:text=":" />
 
             <TextView
@@ -409,7 +415,7 @@
                 android:layout_weight="1"
                 android:gravity="left|center"
                 android:textStyle="bold"
-                
+
                 android:textSize="@dimen/font_size" />
         </TableRow>
     </TableLayout>
