--- a/app/src/main/res/layout/appointment_list_item.xml
+++ b/app/src/main/res/layout/appointment_list_item.xml
@@ -10,21 +10,24 @@
             android:layout_height="wrap_content"
             android:text="Date"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="16sp"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:padding="5dp"
+            android:layout_marginRight="5dp"
             android:textStyle="bold"
             android:text=":" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tv_Date_of_selection_details"
-            android:textSize="18sp"
+            android:textSize="16sp"
+            android:layout_weight="1"
             android:textStyle="bold"
+
             />
     </TableRow>
 
@@ -32,20 +35,20 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="User Name"
-        android:textSize="18sp"
+        android:text="User name"
+        android:textSize="16sp"
         />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:padding="5dp"
             android:text=":" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tv_nameofperson"
-        android:textSize="18sp"
+        android:textSize="16sp"
         />
     </TableRow>
     <TableRow>
@@ -54,19 +57,18 @@
         android:layout_height="wrap_content"
         android:text="Service"
 
-        android:textSize="18sp"
+        android:textSize="16sp"
        />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:padding="5dp"
             android:text=":" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-
+        android:textSize="16sp"
         android:id="@+id/tv_type_service_details"
     />
     </TableRow>
@@ -76,19 +78,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Location"
-        android:textSize="20sp"
+        android:textSize="16sp"
 
         />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:padding="5dp"
             android:text=":" />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
+        android:textSize="16sp"
 
         android:id="@+id/tv_lab_address_details"
        />
@@ -97,20 +99,23 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/confirmation"
-            android:textSize="18sp"
+            android:text="@string/confirmationno"
+            android:textSize="16sp"
             />
+
         <TextView
+            android:id="@+id/textView10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:gravity="left"
             android:padding="5dp"
             android:text=":" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tv_appointment_id"
-            android:textSize="18sp"
+            android:textSize="16sp"
 
           />
     </TableRow>
