--- a/app/src/main/res/layout/date_time_slot.xml
+++ b/app/src/main/res/layout/date_time_slot.xml
@@ -6,6 +6,7 @@
     android:padding="5dp"
     android:textStyle="bold"
     android:gravity="center_vertical"
+    android:textSize="@dimen/upcoming"
     android:drawableTint="@color/upcoming_text"
     android:drawableRight="@drawable/forward">
 
