--- a/app/src/main/res/layout/login_alert.xml
+++ b/app/src/main/res/layout/login_alert.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00000000"
+    android:background="@android:color/transparent"
     >
 
     <RelativeLayout
@@ -45,31 +45,30 @@
             style="@style/loginPage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/line"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="50dp"
             android:padding="0dp"
             android:paddingRight="50dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/email"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:layout_alignBaseline="@+id/et_email"
+            android:layout_alignBottom="@+id/et_email"
+            android:layout_toRightOf="@+id/tv_reset_password"
+            android:layout_toEndOf="@+id/tv_reset_password" />
 
         <EditText
             android:id="@+id/et_email"
-            style="@style/loginPage"
+
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_alignBottom="@+id/tv_email"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/line"
-            android:layout_marginRight="10dp"
-            android:layout_toEndOf="@+id/tv_email"
-            android:background="@drawable/rounded_corner"
+            android:layout_height="40dp"
+            android:layout_weight=".59"
+            android:hint="@string/email"
             android:inputType="textEmailAddress"
-            android:maxLength="248"
-            android:padding="2dp"
             android:singleLine="true"
-            tools:ignore="RtlCompat" />
+            android:layout_below="@+id/loginText"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignLeft="@+id/et_password"
+            android:layout_alignStart="@+id/et_password" />
 
         <View
             android:id="@+id/line2"
@@ -81,19 +80,14 @@
         <EditText
             android:id="@+id/et_password"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            style="@style/loginPage"
+            android:layout_height="40dp"
+            android:layout_alignBaseline="@+id/tv_Password"
             android:layout_alignBottom="@+id/tv_Password"
-            android:layout_alignEnd="@+id/et_email"
-            android:layout_alignRight="@+id/et_email"
-            android:layout_below="@+id/line2"
-            android:layout_toRightOf="@+id/tv_email"
-            android:inputType="textWebPassword"
-            android:background="@drawable/rounded_corner"
-            android:maxLength="32"
-            android:padding="2dp"
-            android:singleLine="true"
-            tools:ignore="RtlCompat" />
+            android:layout_toRightOf="@+id/tv_Password"
+            android:layout_weight=".59"
+            android:hint="@string/password"
+            android:inputType="textPassword"
+            android:singleLine="true" />
 
         <View
             android:id="@+id/line3"
@@ -121,14 +115,17 @@
             android:id="@+id/tv_Password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/tv_email"
-            android:layout_alignStart="@+id/tv_email"
-            android:layout_below="@+id/line2"
             android:padding="0dp"
             style="@style/loginPage"
             android:paddingRight="50dp"
             android:text="@string/password"
-            android:textColor="@color/black" />
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/black"
+            android:layout_below="@+id/tv_email"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginTop="11dp" />
 
         <View
             android:id="@+id/line5"
@@ -142,13 +139,15 @@
             android:id="@+id/forgotPassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/et_password"
-            android:layout_alignRight="@+id/et_password"
-            android:layout_below="@+id/line3"
             android:gravity="right"
             android:text="@string/forgot"
             style="@style/loginPage"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_below="@+id/line3"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="7dp"
+            android:layout_marginEnd="7dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
